[project]
name = "langchaintutorial"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.14"
dependencies = [
    "langchain>=1.3.1", #langchain-core installed inside langchain by default
    "langchain-community>=0.4.1",
    "langchain-ollama>=1.1.0",
    "load-dotenv>=0.1.0",
    "ollama>=0.6.2",
    "openai>=2.38.0",
]
